@@ -1,0 +1,3 @@
+This plugin is intended to extend the filtering possibilities of
+Claws Mail. It provides a Perl interface to Claws Mail' filtering
+mechanism, allowing the use of full Perl power in email filters.
