@@ -1,0 +1,3 @@
+@comment $NetBSD: PLIST,v 1.1 2007/08/08 13:22:30 smb Exp $
+lib/claws-mail/plugins/synce_plugin.la
+@dirrm lib/claws-mail/plugins
