@@ -1,0 +1,5 @@
+$NetBSD: distinfo,v 1.1 2007/08/08 13:22:30 smb Exp $
+
+SHA1 (synce_plugin-0.7.1.tar.gz) = f7af69bc665ad96b8085e9ccce10398676d54233
+RMD160 (synce_plugin-0.7.1.tar.gz) = 3c906e7395713cc31add23c7360985a76a23c0ff
+Size (synce_plugin-0.7.1.tar.gz) = 333513 bytes
