@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2007,v 1.1742 2007/08/08 12:19:11 obache Exp $
+$NetBSD: CHANGES-2007,v 1.1743 2007/08/08 13:22:30 smb Exp $
 
 Changes to the packages collection and infrastructure in 2007:
 
@@ -3208,3 +3208,4 @@ Changes to the packages collection and infrastructure in 2007:
 	Updated meta-pkgs/gnuradio to 3.0.4 [wulf 2007-08-08]
 	Added sysutils/vbetool version 0.7.1 [xtraeme 2007-08-08]
 	Updated fonts/dejavu-ttf to 2.19 [obache 2007-08-08]
+	Added mail/claws-mail-synce_plugin version 0.7.1 [smb 2007-08-09]
